--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ nav {
     display: flex;
     align-items: center;
     padding: 16px;
+    max-width: 932px;
+    margin: 0 auto;
 }
 
 ul {
@@ -45,7 +47,8 @@ li {
 .header-content {
     display: flex;
     padding: 52px 16px;
-    gap: 16px;
+    gap: 32px;
+    justify-content: center;
     align-items: center;
 }
 
@@ -54,10 +57,11 @@ li {
     font-weight: 900;
     color: #F9FAF8;
     align-self: stretch;
+    width: 450px;
 }
 
 img.intro-img {
-    width: 50%;
+    width: 450px;
 }
 
 .intro-text {
@@ -73,4 +77,11 @@ img.intro-img {
     font-weight: 700;
     border-radius: 8px;
     border: none;
+}
+
+.info-title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
 }
