--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,59 @@ img.intro-img {
     border: none;
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .info-title {
-    text-align: center;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    margin: 24px 0;
 }
+
+.info-content {
+    display: flex;
+    margin-bottom: 52px;
+    justify-content: center;
+    text-align: center;
+    max-width: 800px;
+    gap: 24px;
+}
+
+.card-img {
+    height: 150px;
+    width: 150px;
+    border-radius: 12px;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    font-weight: 500;
+    justify-content: center;
+    align-items: center;
+    padding: 108px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: 100;
+    color: #1F2937;
+    max-width: 800px;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.quote-source {
+    margin-top: 6px;
+    align-self: flex-end;
+}
+
+
