--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ p {
 
 .header {
     background-color: #1F2937;
+    flex: 1;
 }
 
 nav {
@@ -87,6 +88,7 @@ img.intro-img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
 .info-title {
@@ -119,6 +121,7 @@ img.intro-img {
     justify-content: center;
     align-items: center;
     padding: 108px;
+    flex: 1;
 }
 
 .quote-text {
@@ -143,6 +146,7 @@ img.intro-img {
     justify-content: center;
     align-items: center;
     padding: 52px 12px;
+    flex: 1;
 }
 
 .cta-content {
