--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 body {
-   font-family: "Roboto", sans-serif; 
-   margin: 0;
-   display: flex;
-   flex-direction: column;
-   height: 100vh;
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 p {
@@ -13,7 +13,7 @@ p {
 }
 
 .header {
-    background-color: #1F2937;
+    background-color: #1f2937;
     flex: 1;
 }
 
@@ -34,14 +34,14 @@ ul {
 
 a {
     text-decoration: none;
-    color: #E5E7EB;
+    color: #e5e7eb;
     font-weight: 300;
 }
 
 a.logo {
     margin-right: auto;
     font-size: 24px;
-    color: #F9FAF8;
+    color: #f9faf8;
     font-weight: 700;
 }
 
@@ -60,7 +60,7 @@ li {
 .intro {
     font-size: 48px;
     font-weight: 900;
-    color: #F9FAF8;
+    color: #f9faf8;
     align-self: stretch;
     width: 450px;
 }
@@ -72,11 +72,11 @@ img.intro-img {
 .intro-text {
     font-size: 18px;
     font-weight: 300;
-    color: #E5E7EB;
+    color: #e5e7eb;
 }
 
 .intro-btn {
-    background-color: #3882F6;
+    background-color: #3882f6;
     padding: 8px 24px;
     color: white;
     font-weight: 700;
@@ -88,13 +88,12 @@ img.intro-img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 1;
 }
 
 .info-title {
     font-size: 36px;
     font-weight: 900;
-    color: #1F2937;
+    color: #1f2937;
     margin: 24px 0;
 }
 
@@ -114,20 +113,19 @@ img.intro-img {
 }
 
 .quote {
-    background-color: #E5E7EB;
+    background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
     font-weight: 500;
     justify-content: center;
     align-items: center;
     padding: 108px;
-    flex: 1;
 }
 
 .quote-text {
     font-size: 36px;
     font-weight: 100;
-    color: #1F2937;
+    color: #1f2937;
     max-width: 800px;
 }
 
@@ -150,7 +148,7 @@ img.intro-img {
 }
 
 .cta-content {
-    background-color: #3882F6;
+    background-color: #3882f6;
     width: 828px;
     padding: 52px;
     border-radius: 12px;
@@ -175,7 +173,7 @@ img.intro-img {
 
 .cta-btn {
     border-radius: 8px;
-    background-color: #3882F6;
+    background-color: #3882f6;
     color: white;
     border: 1px solid white;
     padding: 8px 24px;
@@ -184,12 +182,8 @@ img.intro-img {
 footer {
     text-align: center;
     padding: 24px;
-    background-color: #1F2937;
+    background-color: #1f2937;
     color: white;
     font-weight: 300;
     margin-top: auto;
 }
-
-
-
-
